# chrocog

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  INTEGRITY_AUDIT_REPORT.md  Makefile  README.md  RELEASE_NOTES.md  apply-diff-safe.ps1  check_docstrings.py  cleanup.diff  docker-compose.staging.yml  doit.diff  doit_clean.diff  fix.diff  fix_clean.diff  fix_docstrings.py  fix_final.diff  fix_pure.diff  fix_rebuilt.diff  fix_server_imports.py  fix_test_imports.py  hot.diff  phi_tone_run_01.json  phi_tone_run_01_with_history.json  pyproject.toml  pytest.ini  repair.diff  repair_server_syntax.py  soundlab_v2.html  strip_type_hints.py  test-page.html  validate_soundlab_v1_final.py
.claude/: settings.local.json
benchmarks/: README.md  latency_v1.1.json
config/: license-allowlist.txt  privacy.json  security.yaml
css/: soundlab-controls.css  soundlab-theme.css  soundlab-visuals.css
docs/: BUILD_GUIDE.md  COMPREHENSIVE-ANALYSIS.md  COMPREHENSIVE_PROJECT_ANALYSIS_2025.md  FEATURE_007_CONTROL_MATRIX.md  FEATURE_008_METRICS_HUD.md  FEATURE_009_MIDI_KEYBOARD.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  MAIN_PY_REFACTORING_BLUEPRINT.md  OPERATIONS.md  PHASE3_IMPLEMENTATION.md  PRIVACY.md  PROJECT_STATUS_COMPLETE.md  QUICKSTART.md  REFACTORING_COMPLETE_REPORT.md  REFACTORING_STATUS_REPORT.md  RUNBOOK.md  TROUBLESHOOTING.md  changes-2025-10-13-0509.md  feature-018-benchmark.md  hardware_integration.md  incident_response.md  phase-2-fixes-report.md  phase-3-fixes-report.md  phase-4-enhancements-report.md  prompt-1-html-elements.md  prompt-2-verification-report.md  prompt-3-runtime-simulation.md  prompt-4-summary-report.md  roadmap.json  roadmap_v1.1.md  soundlab-diagnostic-report.md  soundlab-functional-map.md  soundlab-validation-report.md  technical-spec-001-audio-engine-integration.md  threat_model.md  versioning_policy.md
examples/: 01_basic_client.py  02_preset_management.py  03_websocket_streaming.py  04_session_recording.py  05_performance_monitoring.py  README.md
hardware/: hybrid_node.cpp  hybrid_node.h  i2s_bridge.cpp  i2s_bridge.h  phi_sensor.cpp  phi_sensor.h
js/: control-matrix-panel.js  control-matrix.js  keyboard-midi-control.js  metrics-dashboard.js  metrics-hud.js  midi-controller.js  phi-matrix-visualizer.js  preset-browser-ui.js  preset-browser.js  soundlab-audio-core.js  soundlab-config.js  soundlab-events.js  soundlab-image.js  soundlab-logging.js  soundlab-main.js  soundlab-phase3-integration.js  soundlab-phi.js  soundlab-utils.js
partials/: config-loader.html  eq-panel.html  image-sonification.html  log-and-matrix.html  saturation-panel.html  transport-controls.html  visualizers.html
sase_amp_fixed/: DASE_Performance_Analysis_Report.docx  analog_universal_node_engine_avx2.cpp  analog_universal_node_engine_avx2.h  dase_benchmark.py  dase_benchmark_results_20250827_035604.json  dase_benchmark_results_20250827_042232.json  dase_benchmark_results_20250831_112249.json  dase_benchmark_results_20250831_114146.json  dase_benchmark_results_20250908_090306.json  libfftw3-3.exp  libfftw3-3.lib  python_bindings.cpp  setup.py
scripts/: add_type_hints.py  batch_refactor.py  check_benchmarks.py  convert_prints_to_logging.py  fix_format_syntax.py  generate_changelog.py  generate_roadmap_html.py  license_check.py  purge_retention.py  run_tests_and_report.py
server/: README.md  __init__.py  ab_snapshot.py  adaptive_scaler.py  agents.md  audio_engine.py  audio_server.py  auto_phi.py  benchmark_runner.py  calibrate_sensors.py  chromatic_field_processor.py  chromatic_visualizer.py  cluster_monitor.py  correlation_analyzer.py  criticality_balancer.py  main.py  (+44 more)
(+248 files in other folders)
